# bruc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: flow-transform.rs  pipes.rs  pipes_async.rs  transform.rs
bruc-core/: Cargo.toml
bruc-core/benches/: flow-transform.rs  graph-transform.rs  render-svg.rs
bruc-core/examples/: svg-bar-chart.rs  svg-line-chart.rs  svg-pie-chart.rs  svg-scatter-plot.rs
bruc-core/src/: data.rs  lib.rs  render.rs  scale.rs  util.rs
bruc-core/src/flow/: data.rs  mod.rs
bruc-core/src/flow/render/: line.rs
bruc-core/src/flow/scale/: linear.rs
bruc-core/src/flow/transform/: filter.rs  group.rs  map.rs  mod.rs
bruc-core/src/graph/: mod.rs  node.rs  pulse.rs
bruc-core/src/graph/node/: axis.rs  color.rs  data.rs  mark.rs  mod.rs  scale.rs  shape.rs  transform.rs  util.rs
bruc-core/src/mark/: base.rs  line.rs  mod.rs
bruc-core/src/parser/: mod.rs
bruc-core/src/render/: mod.rs  svg.rs
bruc-core/src/scale/: domain.rs  linear.rs  mod.rs  range.rs
bruc-core/src/scene/: mod.rs
bruc-core/src/spec/: data.rs  mod.rs
bruc-core/src/spec/axis/: mod.rs
bruc-core/src/spec/mark/: base.rs  line.rs  mod.rs
bruc-core/src/spec/scale/: band.rs  domain.rs  linear.rs  log.rs  mod.rs  range.rs
bruc-core/src/spec/shape/: bar.rs  base.rs  line.rs  mod.rs  pie.rs  point.rs
bruc-core/src/spec/transform/: error.rs  filter.rs  group.rs  map.rs  mod.rs  pipe.rs
bruc-core/src/transform/: error.rs  filter.rs  group.rs  map.rs  mod.rs
bruc-expression/: Cargo.toml
bruc-expression/benches/: parser.rs
bruc-expression/src/: data.rs  error.rs  expr.rs  lexer.rs  lib.rs  parser.rs  serde.rs  symbols.rs  vars.rs
bruc-expression/tests/: parser.rs  serde.rs
bruc-wasm/: Cargo.toml
bruc-wasm/examples/line-chart/: index.html  index.js  package-lock.json  package.json  webpack.config.js
bruc-wasm/src/: lib.rs
bruc-web/: package-lock.json  package.json  rollup.config.js  tsconfig.json
bruc-web/examples/bar-chart/: index.html  index.js  package-lock.json  package.json  webpack.config.js
bruc-web/examples/line-chart/: index.html  index.js  package-lock.json  package.json
bruc-web/examples/pie-chart/: index.html  index.js  package-lock.json  package.json  webpack.config.js
bruc-web/examples/scatter-plot/: index.html  index.js  package-lock.json  package.json
bruc-web/src/: index.ts
core/: Cargo.toml
core/benches/: flow-transform.rs
core/src/: data.rs  lib.rs
core/src/flow/: data.rs
core/src/flow/scale/: linear.rs
core/src/flow/transform/: filter.rs  group.rs  map.rs  mod.rs
core/src/mark/: base.rs  line.rs  mod.rs
core/src/scale/: linear.rs  mod.rs  range.rs
core/src/transform/: error.rs  filter.rs  map.rs  mod.rs  pipe.rs
expression/: Cargo.toml
expression/benches/: parser.rs
expression/src/: error.rs  expr.rs  lexer.rs  lib.rs  parser.rs  serde.rs  symbols.rs  vars.rs
expression/tests/: parser.rs  serde.rs
src/: data.rs  error.rs  filter.rs  filter_async.rs  group.rs  group_async.rs  iter.rs  lib.rs  map.rs  map_async.rs  pipe.rs  pipe_async.rs  serde.rs
src/flow/: data.rs  mod.rs
src/flow/render/: line.rs  mod.rs
src/flow/scale/: linear.rs
src/flow/transform/: filter.rs  group.rs  map.rs  mod.rs
src/mark/: base.rs  line.rs  mod.rs
src/scale/: domain.rs  linear.rs  mod.rs  serde.rs
src/transform/: filter.rs  group.rs  map.rs  mod.rs  pipe.rs  serde.rs
tests/: serde.rs
