[package]
name = "bruc"
version = "0.1.0"
authors = ["aleics <aleics.casanovas@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.7"
bruc-expreter = { git = "ssh://git@github.com/aleics/bruc-expreter.git", features = ["serde"] }

# For external trait impls
serde = { version = "1.0.117", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.59"

[package.metadata.docs.rs]
features = ["serde"]
