[package]
name = "bruc-core"
version = "0.1.0"
authors = ["aleics <aleics.casanovas@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3.29"
async-std = "1.12.0"

# For external trait impls
serde = { version = "1.0.190", features = ["derive"], optional = true }

# Internal packages
bruc-expression = { path = "../bruc-expression", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["rt", "macros"] }

[package.metadata.docs.rs]
features = ["serde"]
