[package]
name = "bruc-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = "1.12.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["Document", "Element", "HtmlElement", "Window"] }
serde_json = "1.0"

# Internal packages
bruc-core = { path = "../bruc-core", features = ["serde"] }
