[package]
name = "core"
version = "0.1.0"
authors = ["aleics <aleics.casanovas@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.12"

# For external trait impls
serde = { version = "1.0.123", features = ["derive"], optional = true }

# Internal packages
expression = { path = "../expression", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.61"

[package.metadata.docs.rs]
features = ["serde"]
